<resources>
    <string name="app_name">ePortal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="txt_no_data_found">No Data Found</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="add">Add</string>
    <string name="menu_weather">Weather</string>
    <string name="BtnAdd">Add</string>
    <string name="menu_recipes">Recipes</string>
    <string name="title_nutrition_fact">Nutrition Fact</string>
    <string name="txtProtein">"Protein - %d$"</string>
    <string name="title_country_of_origin">Country of Origin</string>
    <string name="error">Error</string>
</resources>